# mhfields

./: .gitignore  LICENSE  README.md  __init__.py  fields.py  pyproject.toml  segment.py  setup.cfg  visualization.py
examples/: generate_all.py  helix.py  helix_povray.py  parallel_wires.py  ring_of_charge.py  ring_of_current.py  ring_povray.py  solenoid.py
mhfields/: assembly.py  elements.py  fields.py  visualization.py
octave/: Makefile  README.md  loop_bfield.m  loop_bfield3d.m  loop_efield.m  loop_efield3d.m  plot_bfield.m  plot_efield.m
tests/: __init__.py  test_assembly.py  test_elements.py  test_numerical.py  test_on_axis.py  test_regression.py  test_segment.py
tools/: benchmark.py
