[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mhfields"
version = "0.1.0"
description = "Electromagnetic field calculations for rings of charge and current"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Indrek Mandre", email = "indrek@mare.ee"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/harakas/mhfields"
Repository = "https://github.com/harakas/mhfields"

[tool.setuptools.packages.find]
include = ["mhfields"]
