[metadata]
name = mhfields
version = 0.1.0
description = Electromagnetic field calculations for rings of charge and current
author = Indrek Mandre
author_email = indrek@mare.ee
license = MIT
url = https://github.com/harakas/mhfields

[options]
packages = mhfields
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    pytest
